# superset-migrator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
superset_migrator/: __init__.py  cli.py  client.py  config.py  logger.py  transformer.py  ui.py
